<resources>
    <string name="app_name">L03_BillPlease</string>
    <string name="amount">Amount :</string>
    <string name="num_of_pax">Num of Pax :</string>
    <string name="no_svs">NO SVS</string>
    <string name="no_svs_">NO SVS</string>
    <string name="svs">SVS</string>
    <string name="gst">GST</string>
    <string name="no_gst">NO GST</string>
    <string name="gst_">GST</string>
    <string name="discount">Discount% :</string>
    <string name="cash">Cash</string>
    <string name="paynow">PayNow</string>
    <string name="split">SPLIT</string>
    <string name="reset">RESET</string>
    <string name="total_bill">Total Bill:</string>
    <string name="each_pay">Each Pay:</string>
</resources>