<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    tools:layout_editor_absoluteY="25dp">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="-72dp">

        <TextView
            android:id="@+id/amount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/amount" />

        <EditText
            android:id="@+id/editInputAmount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:digits="1234567890"
            android:inputType="phone"
            android:minHeight="48dp"
            tools:ignore="LabelFor,VisualLintTextFieldSize"
            android:autofillHints="" />


        <EditText
            android:id="@+id/editTextText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/app_name"
            android:inputType="text"
            android:minHeight="48dp"
            android:textColorHint="#8D6E63"
            tools:ignore="DuplicateSpeakableTextCheck,VisualLintTextFieldSize" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/num_of_pax" />

        <EditText
            android:id="@+id/numPax"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/app_name"
            android:inputType="text"
            android:minHeight="48dp"
            android:textColorHint="#8D6E63"
            tools:ignore="VisualLintTextFieldSize" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ToggleButton
                android:id="@+id/svs"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:checked="false"
                android:text="@string/no_svs"
                android:textOff="@string/no_svs_"
                android:textOn="@string/svs"
                tools:ignore="VisualLintButtonSize" />

            <ToggleButton
                android:id="@+id/gst"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/gst"
                android:textOff="@string/no_gst"
                android:textOn="@string/gst_"
                tools:ignore="VisualLintButtonSize" />
        </LinearLayout>

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/discount" />

        <EditText
            android:id="@+id/discount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/app_name"
            android:inputType="text"
            android:minHeight="48dp"
            android:textColorHint="#8D6E63"
            tools:ignore="VisualLintTextFieldSize" />

        <RadioGroup
            android:id="@+id/rgMode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                tools:ignore="UselessParent">

                <RadioButton
                    android:id="@+id/radioButton3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/cash"
                    tools:ignore="VisualLintButtonSize" />

                <RadioButton
                    android:id="@+id/radioButton4"
                    android:layout_width="219dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/paynow"
                    tools:ignore="VisualLintButtonSize" />
            </LinearLayout>
        </RadioGroup>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/split"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/split"
                style="?android:attr/buttonBarButtonStyle"
                tools:ignore="VisualLintButtonSize" />

            <Button
                android:id="@+id/reset"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/reset"
                style="?android:attr/buttonBarButtonStyle"
                tools:ignore="VisualLintButtonSize" />
        </LinearLayout>

        <TextView
            android:id="@+id/totalBill"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/total_bill" />

        <TextView
            android:id="@+id/eachPays"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/each_pay" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>